--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -6,6 +6,40 @@
   date = {2023-03-25},
 }
 
+@software{DoTween,
+  author = {{Demigiant}},
+  title = {DOTween},
+  url = {http://dotween.demigiant.com/},
+  date = {2023-03-25},
+}
+
+@software{MathDotNetNumerics,
+  author = {{Math.NET Project}},
+  title = {Math.NET Numerics},
+  url = {https://numerics.mathdotnet.com/},
+  date = {2023-03-25},
+}
+
+@software{SubclassPropertyDrawer,
+  author = {{lordconstant}},
+  title = {SubclassPropertyDrawer},
+  url = {https://github.com/lordconstant/SubclassPropertyDrawer},
+  date = {2023-03-25},
+}
+@software{ConfigurableJointExtensions,
+  author = {{mstevenson}},
+  title = {ConfigurableJointExtensions.cs},
+  url = {https://gist.github.com/mstevenson/4958837},
+  date = {2023-03-25},
+}
+
+@misc{InvertReverseUIMask,
+  author       = {{glitchers}},
+  title        = {thread: Invert/Reverse UI Mask},
+  url         =  {https://answers.unity.com/questions/1066291/invertreverse-ui-mask.html},
+  date         = {2023-03-25}
+}
+
 
 @software{DieByTheSword,
   author = {{Treyarch Corporation}},
@@ -43,9 +77,15 @@
 }
 @software{HalfLife,
   author = {{Valve Corporation}},
-  title = {Half Life},
+  title = {Half-Life},
   url = {https://store.steampowered.com/app/70/HalfLife/},
   date = {1998-11-19},
+}
+@software{HalfLife2,
+  author = {{Valve Corporation}},
+  title = {Half-Life 2},
+  url = {https://store.steampowered.com/app/220/HalfLife_2/},
+  date = {2004-11-16},
 }
 
 @software{WiiRemoteUnityAPI,
